// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderBlockEndColor renders 0 1`] = `
Array [
  .c0 {
  border-block-end-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: #0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndColor renders function 1`] = `
Array [
  .c0 {
  border-block-end-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndColor renders invalid theme path 1`] = `
Array [
  .c0 {
  border-block-end-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndColor renders negative number 1`] = `
Array [
  .c0 {
  border-block-end-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: #-42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: #-42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-block-end-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-end-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-block-end-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-end-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-end-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-end-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndColor renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-block-end-color: July;
  }
}

@media April {
  .c0 {
    border-block-end-color: August;
  }
}

@media January {
  .c0 {
    border-block-end-color: September;
  }
}

@media April {
  .c0 {
    border-block-end-color: November;
  }
}

@media June {
  .c0 {
    border-block-end-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-block-end-color: July;
  }
}

@media April {
  .c0 {
    border-block-end-color: August;
  }
}

@media January {
  .c0 {
    border-block-end-color: September;
  }
}

@media April {
  .c0 {
    border-block-end-color: November;
  }
}

@media June {
  .c0 {
    border-block-end-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-end-color: January;
  }
}

@media April {
  .c0 {
    border-block-end-color: December;
  }
}

@media January {
  .c0 {
    border-block-end-color: April;
  }
}

@media April {
  .c0 {
    border-block-end-color: May;
  }
}

@media June {
  .c0 {
    border-block-end-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-end-color: January;
  }
}

@media April {
  .c0 {
    border-block-end-color: December;
  }
}

@media January {
  .c0 {
    border-block-end-color: April;
  }
}

@media April {
  .c0 {
    border-block-end-color: May;
  }
}

@media June {
  .c0 {
    border-block-end-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndColor renders postitive number 1`] = `
Array [
  .c0 {
  border-block-end-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: #42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: #42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndColor renders string 1`] = `
Array [
  .c0 {
  border-block-end-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndColor renders valid theme path 1`] = `
Array [
  .c0 {
  border-block-end-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
